--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@types/node": "^22.7.7",
-    "@xyflow/react": "^12.3.2",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
@@ -20,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
+    "reactflow": "^11.11.4",
     "sass": "^1.80.3"
   },
   "devDependencies": {
